# mpi-hello-world

./: CMakeLists.txt  README.md  hello.cpp
run/: mpi-hello-world  run_script.pbs
